--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "athena-browser-service"
+name = "athena"
 version = "0.1.0"
-description = "Browser-use scraping service for Athena"
+description = "athena"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.104.0",
@@ -14,3 +14,6 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["python-service"]
