current working version

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,17 @@ POLYGON_API_KEY=
 # AI Services
 OPENAI_API_KEY=
 PERPLEXITY_API_KEY=
+HYPERSPELL_API_KEY=hs-0-xxxxxxxxxxxxxxxxxxxxxx
 
 # Python Browser-Use Service
 PYTHON_SERVICE_URL=http://localhost:8001
+
+# AgentMail (Email-based Trading Assistant)
+AGENTMAIL_API_KEY=your_agentmail_api_key_here
+AGENTMAIL_INBOX_ID=athena@agentmail.to
+AGENTMAIL_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxx
+
+# BetterAuth + Convex
+BETTER_AUTH_SECRET=your_secret_here  # Generate: openssl rand -base64 32
+SITE_URL=http://localhost:3000
+NEXT_PUBLIC_CONVEX_SITE_URL=http://localhost:3000
