--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@alpacahq/alpaca-trade-api": "^3.1.3",
+    "@convex-dev/better-auth": "^0.9.6",
     "@langchain/textsplitters": "^1.0.0",
     "@livekit/components-react": "^2.9.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/better-sqlite3": "^7.6.13",
+    "agentmail": "^0.1.4",
     "axios": "^1.13.1",
+    "better-auth": "^1.3.27",
+    "better-sqlite3": "^12.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
     "date-fns": "^4.1.0",
+    "hyperspell": "^0.26.0",
     "langchain": "^1.0.2",
     "lightweight-charts": "^5.0.9",
     "livekit-client": "^2.15.14",
@@ -28,6 +35,7 @@
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "svix": "^1.81.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
