--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
-    "browser-use>=0.1.0",
+    "browser-use-sdk>=0.1.0",
     "python-dotenv>=1.0.0",
     "pydantic>=2.0.0",
+    "hyperspell>=0.26.0",
 ]
 
 [build-system]
