Switch from Better Auth to Clerk for Vercel deployment
- Replace Better Auth with Clerk authentication
- Update Convex to use Clerk JWT tokens
- Add Clerk providers and components
- Skip Convex queries when not authenticated
- Remove middleware/proxy for simpler auth flow
- Remove SQLite dependency for serverless compatibility

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,10 @@ AGENTMAIL_API_KEY=your_agentmail_api_key_here
 AGENTMAIL_INBOX_ID=athena@agentmail.to
 AGENTMAIL_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxx
 
-# BetterAuth + Convex
-BETTER_AUTH_SECRET=your_secret_here  # Generate: openssl rand -base64 32
-SITE_URL=http://localhost:3000
-NEXT_PUBLIC_CONVEX_SITE_URL=http://localhost:3000
+# Clerk Authentication
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxxxxxxxxxxxxxxxxxxxxx
+CLERK_SECRET_KEY=sk_test_xxxxxxxxxxxxxxxxxxxxxx
+
+# Convex
+NEXT_PUBLIC_CONVEX_URL=https://your-deployment.convex.cloud
+CONVEX_DEPLOYMENT=dev:your-deployment
