--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.1.3",
+    "@clerk/clerk-react": "^5.53.4",
+    "@clerk/nextjs": "^6.34.1",
     "@convex-dev/better-auth": "^0.9.6",
     "@langchain/textsplitters": "^1.0.0",
     "@livekit/components-react": "^2.9.15",
